# Deadlock

./: CMakeLists.txt  README.md
.claude/: settings.local.json
Andromeda-DeadLock/Andromeda-DeadLock/DeadLock/SDK/: CFunctionList.hpp
Andromeda-DeadLock/Andromeda-DeadLock/DeadLock/SDK/Update/: Offsets.hpp
docs/: PATTERN_GUIDE.md
dumper/: __init__.py  offset_finder.py  run_dumper.bat  signature_patterns.py
scripts/: build.bat  run.bat
src/: main.cpp
src/core/: memory.cpp  memory.h  offsets.cpp  offsets.h
src/features/: aimbot.cpp  aimbot.h  esp.cpp  esp.h  radar.cpp  radar.h
src/math/: geometry.cpp  geometry.h
src/render/: imgui_menu.cpp  imgui_menu.h  overlay.cpp  overlay.h
tools/: find_bone_array.py  find_hero_id.py  setup_chain.py  test_pattern.py  universal_tester.py  watch_hero_id.py
